leoo fix (NO READCARD FIX)